View Issue Details

IDProjectCategoryView StatusLast Update
0022038Open CASCADEOCCT:Modeling Datapublic2012-03-29 17:26
ReportermsvAssigned Tobugmaster  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
OSAll 
Target Version6.5.2Fixed in Version6.5.2 
Summary0022038: Suppress "!!!No Error" message in BRepTools::Write in debug mode
DescriptionIf the method performed without error it is not needed to generate the message.
The following line should be run only if errno is not zero.
  cout<<"!!!"<<strerror(errno)<<endl;
TagsNo tags attached.
Test case numberTest case is not required

Attached Files

  • OCC22038_patch_msv_v1.tgz (4,643 bytes)
  • OCC22038_patch_msv_v2.tgz (4,628 bytes)

Activities

2010-10-04 11:24

 

OCC22038_patch_msv_v1.tgz (4,643 bytes)

2010-10-26 15:03

 

OCC22038_patch_msv_v2.tgz (4,628 bytes)

bugmaster

2011-09-12 18:18

administrator   ~0018104

Integration into trunk of occt repository

Date: 2011-09-12 18:16:52 +0400 (Mon, 12 Sep 2011)
New Revision: 8998

Modified:
   trunk/src/BRepTools/BRepTools.cxx

Related Changesets

occt: master c345d68b

2011-09-12 14:16:52

msv


Committer: bugmaster Details Diff
0022038: Suppress "!!!No Error" message in BRepTools::Write in debug mode Affected Issues
0022038
mod - src/BRepTools/BRepTools.cxx Diff File

Issue History

Date Modified Username Field Change
2011-08-02 11:32 bugmaster Category OCCT:MOD => OCCT:Modeling Data
2011-09-12 17:15 msv Fixed in Version EMPTY =>
2011-09-12 17:15 msv Target Version => 6.5.2
2011-09-12 17:15 msv Description Updated
2011-09-12 18:18 bugmaster Test case number => Test case is not required
2011-09-12 18:18 bugmaster Note Added: 0018104
2011-09-12 18:18 bugmaster Status new => verified
2011-09-12 18:18 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master c345d68b