0022038: Suppress "!!!No Error" message in BRepTools::Write in debug mode